@@ -38,6 +38,9 @@
 				<version>3.8.0</version>
 				<configuration>
 					<release>17</release>
+					<source>17</source>
+					<target>17</target>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
